# SDL2-Game

./: .gitignore  2048.sln  CMakeLists.txt
2048/: 2048.cpp  2048.vcxproj  2048.vcxproj.filters  Field.h  GameInitializer.h  Menu.h  NameEntering.h  game_records.h  manual.h
2048/Debug/: 2048.exe.recipe  2048.ilk  2048.obj.enc  vc142.idb
2048/Debug/2048.tlog/: 2048.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/: 2048.ilk
include/: Field.h  GameInitializer.h  GraphicElement.h  Menu.h  NameEntering.h  game_records.h  manual.h
include/Game/: Game.h  IProgramState.h  Program.h
include/Game/ProgramStates/: GameIntro.h  ProgramState.h
include/Math/: Vec2.h  Vec3.h
include/Renderer/: Renderer.h  ResourceManager.h  Sprite.h  Texture.h
include/Resources/: ResourceManager.h  Sprite.h
include/System/: Constants.h  Resources.h  Time.h  Timer.h  Window.h
source/: main.cpp
source/Game/: IProgramState.cpp  Program.cpp
source/Resources/: ResourceManager.cpp  Sprite.cpp
source/System/: Resources.cpp  Window.cpp
